--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: shivamarinesalvorsandengineers
-email: info@shivamarinesalvorsandengineers.com
+title: babita shekhawat
+email: babitashekhawat30aug@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "www.shivamarinesalvorsandengineers.com" # the base hostname & protocol for your site
+url: "www.babitashekhawat.me" # the base hostname & protocol for your site
 
 twitter_username:
 github_username:
