--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: babita shekhawat
-email: babitashekhawat30aug@gmail.com
+email: babitashekhawatgraphicdesigner@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "www.babitashekhawat.me" # the base hostname & protocol for your site
